# Airtable-Whatsapp-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.prod.yml  docker-compose.yml  ecs-task-definition.json  pyproject.toml  requirements.txt  supervisord.conf  test_imports.py  test_whatsapp_business_api.py
logging/: Dockerfile.fluentd  fluent.conf
nginx/: nginx.conf
policies/: iam-task-execution-role-policy.json  iam-task-role-policy.json
scripts/: deploy-ecr.sh  deploy-ecs.sh  setup-aws-infrastructure.sh
src/airtable_whatsapp_agent/: __init__.py  cli.py  config.py
src/airtable_whatsapp_agent/agent/: __init__.py  graph_builder.py  state_manager.py  tool_registry.py  workflow_manager.py
src/airtable_whatsapp_agent/api/: __init__.py  admin.py  app_state.py  main.py  middleware.py  webhooks.py
src/airtable_whatsapp_agent/auth/: __init__.py  authenticator.py  permissions.py  session.py  whitelist.py
src/airtable_whatsapp_agent/aws/: __init__.py  cloudwatch.py  ecs_config.py  eventbridge.py
src/airtable_whatsapp_agent/mcp/: __init__.py  base.py  external_client.py  manager.py
src/airtable_whatsapp_agent/models/: __init__.py  agent.py  airtable.py  auth.py  whatsapp.py
src/airtable_whatsapp_agent/security/: __init__.py  audit.py  credentials.py  encryption.py  jwt_handler.py
src/airtable_whatsapp_agent/utils/: __init__.py  config_manager.py  error_handling.py  logging.py  monitoring.py  rate_limiter.py  validation.py
test/: README.md  cloud_test_utils.py  diagnose_whatsapp_api.py  test_cloud_endpoints.py  test_imports.py  test_whatsapp_flow.py  test_whatsapp_flow_windows.py
whatsapp-business-mcp/: Dockerfile  README.md  package-lock.json  package.json  test_mcp.js
whatsapp-business-mcp/src/: index.js
